# pokebot-redux

./: .env.example  README.md  pyproject.toml
c4_discord_bot/: __main__.py  client.py  updater.py
c4_discord_bot/cogs/: development.py  error.py  neofetch.py  washing_machine.py
c4_discord_bot/cogs/c4 bot pokebot integration/: pokeCog.py  pokebot_evolved.py
c4_discord_bot/cogs/pokeCog/: __main__.py  pokeCog.py  pokebot_evolved.py
c4_discord_bot/cogs/pokeCog/namegen/: modelEvaluator.py  nameGenInterface.py  namegen.py  trainer.py
c4_discord_bot/cogs/pokeCog/statgen/: statgen.py  statgenTraining.py
c4_discord_bot/cogs/pokeCog/type_classifier/: typeClassifier.py  typeClassifierForest.py  typeUtils.py
docs/: tutorial.md
