[project]
name = "c4-discord-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Luna", email = "itsactuallyluna9@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "discord-py>=2.4.0,<3",
    "httpx>=0.28.1,<0.29",
    "python-dotenv>=1.0.1,<2",
    "apscheduler>=3.11.0,<4",
    "pillow>=11.1.0,<12",
    "scikit-learn==1.2.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "joblib>=1.4.2",
    "keras>=3.8.0",
    "google-generativeai>=0.8.4",
    "torch>=2.6.0",
    "nltk>=3.9.1",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
