[project]
name = "c4-discord-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Luna", email = "itsactuallyluna9@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "discord-py>=2.4.0,<3",
    "httpx>=0.28.1,<0.29",
    "python-dotenv>=1.0.1,<2",
    "apscheduler>=3.11.0,<4",
    "pillow>=11.1.0,<12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
